Changed steam link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             ><img src="./img/instaicon.svg" alt="instagram icon link"
           /></a>
           <a
-            href="https://open.spotify.com/user/fwxbvwacj8urxljmj8iaxmw93"
+            href="https://steamcommunity.com/id/sup_official/"
             target="_blank"
             ><img src="./img/steamicon.svg" alt="steam icon link"
           /></a>
