--- a/index.html
+++ b/index.html
@@ -47,4 +47,5 @@
   <script src="./js/particles.js"></script>
   <script src="./js/app.js"></script>
   <script src="./js/parallax.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 </html>
